fixed icon bad display on firefox

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,6 +6,7 @@
 
 .home-service-logo {
   width: 50px;
+  width: -moz-max-content;
 }
 
 .home-service-category {
